--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -38,7 +38,7 @@
            <br>
            <div style="text-align: center;" class="lastDiv">
             <span style="font-size: large;">Need an Account</span> 
-            <a href="./index.html" style="font-size: large;">Sign Up</a>
+            <a href="../index.html" style="font-size: large;">Sign Up</a>
            </div>
         </div>
     
