--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="password" class="inpt">
             <br>
             <br>
-            <a href="./website.html"><button class="btn" style="text-align: center; font-size: large;">SIGN UP</button></a>
+            <a href="./html/website.html"><button class="btn" style="text-align: center; font-size: large;">SIGN UP</button></a>
             <br>
             <br>
             <hr>
@@ -34,7 +34,7 @@
            <br>
            <div style="text-align: center;" class="lastDiv">
             <span style="font-size: large;">Already a User?</span> 
-            <a href="./loginPage.html" style="font-size: large;">LOGIN</a>
+            <a href="./html/loginPage.html" style="font-size: large;">LOGIN</a>
            </div>
         </div>
     
